--- a/package.json
+++ b/package.json
@@ -9,14 +9,17 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@hookform/resolvers": "^5.1.1",
     "moment": "^2.30.1",
     "next": "15.3.5",
     "react": "^19.0.0",
     "react-big-calendar": "^1.19.4",
     "react-calendar": "^6.0.0",
     "react-dom": "^19.0.0",
+    "react-hook-form": "^7.60.0",
     "rechart": "^0.0.1",
-    "recharts": "^3.1.0"
+    "recharts": "^3.1.0",
+    "zod": "^4.0.5"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
