--- a/package.json
+++ b/package.json
@@ -1,39 +1,47 @@
 {
-  "name": "school-management",
+  "name": "lama-dev-next-dashboard",
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev --turbopack",
+    "dev": "next dev",
     "build": "next build",
-    "start": "npm run build && next start",
+    "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
-    "@hookform/resolvers": "^5.1.1",
+    "@clerk/elements": "^0.14.6",
+    "@clerk/nextjs": "^5.4.1",
+    "@hookform/resolvers": "^3.9.0",
+    "@prisma/client": "^5.19.1",
+    "@types/react-big-calendar": "^1.8.9",
     "moment": "^2.30.1",
-    "next": "15.3.5",
-    "prisma": "^6.11.1",
-    "react": "^19.0.0",
-    "react-big-calendar": "^1.19.4",
-    "react-calendar": "^6.0.0",
-    "react-dom": "^19.0.0",
-    "react-hook-form": "^7.60.0",
-    "rechart": "^0.0.1",
-    "recharts": "^3.1.0",
-    "zod": "^4.0.5"
+    "next": "14.2.5",
+    "next-cloudinary": "^6.13.0",
+    "prisma": "^5.19.1",
+    "react": "^18",
+    "react-big-calendar": "^1.13.2",
+    "react-calendar": "^5.0.0",
+    "react-dom": "^18",
+    "react-hook-form": "^7.52.2",
+    "react-toastify": "^10.0.5",
+    "recharts": "^2.12.7",
+    "tsconfig-paths": "^4.2.0",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
-    "@eslint/eslintrc": "^3",
-    "@tailwindcss/postcss": "^4",
-    "@types/node": "^20",
-    "@types/react": "^19",
-    "@types/react-big-calendar": "^1.16.2",
-    "@types/react-dom": "^19",
+    "@tailwindcss/postcss": "^4.1.11",
+    "@types/node": "^20.19.9",
+    "@types/react": "^18",
+    "@types/react-dom": "^18",
     "autoprefixer": "^10.4.21",
-    "eslint": "^9",
-    "eslint-config-next": "15.3.5",
+    "eslint": "^8",
+    "eslint-config-next": "14.2.5",
     "postcss": "^8.5.6",
-    "tailwindcss": "^4.1.11",
+    "tailwindcss": "^3.4.17",
+    "ts-node": "^10.9.2",
     "typescript": "^5"
+  },
+  "prisma": {
+    "seed": "ts-node --compiler-options {\"module\":\"CommonJS\"} prisma/seed.ts"
   }
 }
